# clichat

./: Cargo.toml  README.md
clichat-client/: Cargo.toml
clichat-client/src/: main.rs
clichat-server/: Cargo.toml
clichat-server/src/: main.rs
src/: main.rs
